Closed
Bug 1153381
Opened 10 years ago
Closed 10 years ago
WebGL Google Maps rendering bugs with D3D11 ANGLE on GMA4500
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
People
(Reporter: jrmuizel, Assigned: jrmuizel)
Details
Attachments
(3 files, 1 obsolete file)
57.68 KB,
image/jpeg
|
Details | |
10.02 KB,
patch
|
mstange
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
lmandel
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
9.26 KB,
patch
|
Details | Diff | Splinter Review |
I can reproduce this locally.
Assignee | ||
Comment 1•10 years ago
|
||
[Tracking Requested - why for this release]: This is 37 regression on a high profile property
status-firefox37:
--- → affected
tracking-firefox37:
--- → ?
tracking-firefox38:
--- → ?
tracking-firefox39:
--- → ?
tracking-firefox40:
--- → ?
Assignee | ||
Updated•10 years ago
|
OS: Mac OS X → Windows 7
Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8591055 -
Flags: review?(mstange)
Comment 3•10 years ago
|
||
Comment on attachment 8591055 [details] [diff] [review]
Blacklist D3D11 ANGLE on some Intel cards
Review of attachment 8591055 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/thebes/gfxPlatform.cpp
@@ +2267,5 @@
> + MOZ_ASSERT(sLayersAccelerationPrefsInitialized);
> + return sANGLESupportsD3D11;
> +}
> +
> +
Too much whitespace
::: widget/nsIGfxInfo.idl
@@ +7,5 @@
> #include "nsISupports.idl"
>
> /* NOTE: this interface is completely undesigned, not stable and likely to change */
>
> +[scriptable, uuid(74fdaac3-e5ce-4944-becc-c08c168f673c)]
Does adding constants require an uuid update?
Attachment #8591055 -
Flags: review?(mstange) → review+
Assignee | ||
Comment 4•10 years ago
|
||
Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8591055 [details] [diff] [review]
Blacklist D3D11 ANGLE on some Intel cards
Approval Request Comment
[Feature/regressing bug #]: bug 1079398
[User impact if declined]: Somewhat broken Google Maps
[Describe test coverage new/current, TreeHerder]: I sort of tested this on a machine that's affected but it had another issue related to Nightly. I tested this on a unaffected machine and it did not have a negative impact
[Risks and why]: Should be pretty low
Attachment #8591055 -
Flags: approval-mozilla-release?
Attachment #8591055 -
Flags: approval-mozilla-beta?
Attachment #8591055 -
Flags: approval-mozilla-aurora?
Comment 6•10 years ago
|
||
Tracking as we don't want Canada to be under water.
Assignee: nobody → jmuizelaar
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment 8•10 years ago
|
||
Comment on attachment 8591055 [details] [diff] [review]
Blacklist D3D11 ANGLE on some Intel cards
Should be in beta 4.
Attachment #8591055 -
Flags: approval-mozilla-beta?
Attachment #8591055 -
Flags: approval-mozilla-beta+
Attachment #8591055 -
Flags: approval-mozilla-aurora?
Attachment #8591055 -
Flags: approval-mozilla-aurora+
Comment 9•10 years ago
|
||
Needs rebasing for Aurora/Beta uplift.
status-firefox38:
--- → affected
status-firefox39:
--- → affected
Flags: needinfo?(jmuizelaar)
Keywords: branch-patch-needed
Assignee | ||
Comment 10•10 years ago
|
||
Flags: needinfo?(jmuizelaar)
Updated•10 years ago
|
Keywords: branch-patch-needed
Comment 11•10 years ago
|
||
Assignee | ||
Comment 12•10 years ago
|
||
The aurora patch should apply to beta.
Assignee | ||
Comment 13•10 years ago
|
||
Attachment #8591799 -
Attachment is obsolete: true
Comment 14•10 years ago
|
||
Comment 15•10 years ago
|
||
Comment 16•10 years ago
|
||
Comment on attachment 8591055 [details] [diff] [review]
Blacklist D3D11 ANGLE on some Intel cards
This bug is one of the drivers for 37.0.2. Release+
Attachment #8591055 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Updated•10 years ago
|
Comment 17•10 years ago
|
||
Comment 18•10 years ago
|
||
We do not have the exact Graphics Card mentioned here, and we could not reproduce the issue on other Intel cards that we have available, on Windows 7 x64 and Windows 8 x64, with Firefox 37.0.1.
Jeff, could you confirm that the fix works correctly on the machine that you've reproduced this? At least for Firefox 37.0.2: https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/37.0.2-candidates/build1/.
Flags: needinfo?(jmuizelaar)
Assignee | ||
Comment 19•10 years ago
|
||
Yes this works properly on the machine that could reproduce the issue.
Flags: needinfo?(jmuizelaar)
Comment 20•10 years ago
|
||
Thanks Jeff!
Comment 21•10 years ago
|
||
Relnoted as "Google Maps may render incorrectly in some cases"
relnote-firefox:
--- → 37+
Updated•8 years ago
|
Flags: in-moztrap+
Flags: a11y-review+
Assignee | ||
Comment 22•4 years ago
|
||
This may have been regressed by bug 1440849
You need to log in
before you can comment on or make changes to this bug.
Description
•