Bug 1153381 - Add a D3D11 ANGLE blacklist. r=mstange, a=lmandel, ba=const-only-change

This blocks the Intel 4500 style GPUs so that Google Maps works properly. IGNORE IDL CHANGES